--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,3 @@
 @import "./external_styles/Semantic-UI-CSS-master/semantic.min.css";
 @import "~react-quill/dist/quill.snow.css";
+@import "~font-awesome/css/font-awesome.css";
