--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import '~antd/dist/antd.css';
 @import "./external_styles/Semantic-UI-CSS-master/semantic.min.css";
 @import "~react-quill/dist/quill.snow.css";
 @import "~font-awesome/css/font-awesome.css";
@@ -17,5 +18,6 @@
   transform: scale(0);
   transition: transform 1000ms ease;
 }
-
-
+.ant-modal-body {
+  padding: 0
+}
