--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 @import "~font-awesome/css/font-awesome.css";
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
+
 .transition-enter {
   transform: scale(0);
 }
@@ -20,4 +21,8 @@
 }
 .ant-modal-body {
   padding: 0
+}
+
+h2 {
+  color: inherit !important;
 }
