--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,99 @@
 h1, h2, h3, h4, h5 {
   color: unset;
 }
+
+@-webkit-keyframes AnimationName {
+    0%{background-position:73% 0%}
+    50%{background-position:28% 100%}
+    100%{background-position:73% 0%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:73% 0%}
+    50%{background-position:28% 100%}
+    100%{background-position:73% 0%}
+}
+@-o-keyframes AnimationName {
+    0%{background-position:73% 0%}
+    50%{background-position:28% 100%}
+    100%{background-position:73% 0%}
+}
+@keyframes AnimationName { 
+    0%{background-position:73% 0%}
+    50%{background-position:28% 100%}
+    100%{background-position:73% 0%}
+}
+
+
+.dark_gradient_bg {
+  overflow-y: scroll;
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+ background: linear-gradient(91deg, #000000, #020202, #040404, #060606, #080808, #101010, #121212, #141414, #161616, #181818, #202020, #222222, #242424, #262626, #282828, #303030, #323232, #343434, #363636, #404040);
+background-size: 4000% 4000%;
+
+-webkit-animation: darktheme 19s ease infinite;
+-moz-animation: darktheme 19s ease infinite;
+-o-animation: darktheme 19s ease infinite;
+animation: darktheme 19s ease infinite;
+
+
+}
+.light_gradient_bg {
+    overflow-y: scroll;
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(91deg, #ffffff, #fdfdfd, #fbfbfb, #f9f9f9, #f7f7f7, #f5f5f5, #f3f3f3, #f1f1f1, #efefef, #ededed, #ebebeb, #e9e9e9, #e7e7e7, #e5e5e5, #e3e3e3, #e1e1e1, #dfdfdf, #dddddd, #dbdbdb, #d9d9d9);
+  background-size: 4000% 4000%;
+  -webkit-animation: lighttheme 19s ease infinite;
+  -moz-animation: lighttheme 19s ease infinite;
+  -o-animation: lighttheme 19s ease infinite;
+  animation: lighttheme 19s ease infinite;
+
+}
+@-webkit-keyframes lighttheme {
+    0%{background-position:0% 70%}
+    50%{background-position:100% 31%}
+    100%{background-position:0% 70%}
+}
+@-moz-keyframes lighttheme {
+    0%{background-position:0% 70%}
+    50%{background-position:100% 31%}
+    100%{background-position:0% 70%}
+}
+@-o-keyframes lighttheme {
+    0%{background-position:0% 70%}
+    50%{background-position:100% 31%}
+    100%{background-position:0% 70%}
+}
+@keyframes lighttheme { 
+    0%{background-position:0% 70%}
+    50%{background-position:100% 31%}
+    100%{background-position:0% 70%}
+}
+
+@-webkit-keyframes darktheme {
+    0%{background-position:0% 70%}
+    50%{background-position:100% 31%}
+    100%{background-position:0% 70%}
+}
+@-moz-keyframes darktheme {
+    0%{background-position:0% 70%}
+    50%{background-position:100% 31%}
+    100%{background-position:0% 70%}
+}
+@-o-keyframes darktheme {
+    0%{background-position:0% 70%}
+    50%{background-position:100% 31%}
+    100%{background-position:0% 70%}
+}
+@keyframes darktheme { 
+    0%{background-position:0% 70%}
+    50%{background-position:100% 31%}
+    100%{background-position:0% 70%}
+}
