--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
 @import "~font-awesome/css/font-awesome.css";
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
+@import "~primereact/resources/themes/redmond/theme.css";
+@import "~primereact/resources/primereact.min.css";
 
 .transition-enter {
   transform: scale(0);
