--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ h1, h2, h3, h4, h5 {
   top: 0;
   left: 0;
   position: absolute;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
  background: linear-gradient(91deg, #000000, #020202, #040404, #060606, #080808, #101010, #121212, #141414, #161616, #181818, #202020, #222222, #242424, #262626, #282828, #303030, #323232, #343434, #363636, #404040);
 background-size: 4000% 4000%;
