--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import '~antd/dist/antd.css';
 @import "./external_styles/Semantic-UI-CSS-master/semantic.min.css";
 @import "~react-quill/dist/quill.snow.css";
-@import "~font-awesome/css/font-awesome.css";
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
 @import "~primereact/resources/themes/redmond/theme.css";
