--- a/src/App.css
+++ b/src/App.css
@@ -286,7 +286,7 @@ html {
 
     .pricing-table {
   width: 700px;
-  margin: 30px auto 30px auto;
+  margin: 30px 30px auto;
   font-family:"Arial";
 }
 .pricing-table ul {
