--- a/src/App.css
+++ b/src/App.css
@@ -475,3 +475,15 @@ html {
   padding: 15px 0;
   font-size: 22px;
 }
+
+/* Twitch */
+
+.ui.twitch.button {
+  background-color: #6441A5;
+  color: #FFF;
+  box-shadow: 0 0 0 0 rgba(34, 36, 38, .15) inset
+}
+
+.ui.twitch.button:hover {
+  background-color: #3B2064
+}
