--- a/src/App.css
+++ b/src/App.css
@@ -526,3 +526,24 @@ html {
     -moz-animation: pulse 3s infinite ease-in-out; 
     animation: pulse 3s infinite ease-in-out;
 }
+
+.error_page {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  z-index: 10000;
+  background-color: black;
+  opacity: 0.90;
+}
+
+.error_page_overlay {
+width: 100vw;
+    height: 100vh;
+    position: absolute;
+    z-index: 10001;
+    color: white;
+    width: 100vw;
+    margin-top: 37vh;
+    height: 120px;
+    background-color: black;
+}
