--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,8 @@ h1, h2, h3, h4, h5 {
 
 .dark_gradient_bg {
   overflow-y: scroll;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
   top: 0;
   left: 0;
   position: absolute;
