--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 @import '~antd/dist/antd.min.css';
 @import "./external_styles/Semantic-UI-CSS-master/semantic.min.css";
-@import "~react-quill/dist/quill.snow.css";
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 /* @import "~slick-carousel/slick/slick.css"; */
 /* @import "~slick-carousel/slick/slick-theme.css"; */
@@ -8,6 +7,8 @@
 @import "~primereact/resources/primereact.min.css";
 @import "~react-alice-carousel/lib/alice-carousel.css";
 @import "~rsuite/dist/styles/rsuite.min.css";
+@import "~react-draft-wysiwyg/dist/react-draft-wysiwyg.css";
+
 .transition-enter {
   transform: scale(0);
 }
@@ -482,11 +483,13 @@ html {
   font-size: 22px;
 }
 
-.ql-editor{
+.demo-wrapper {
+  margin-top: 16px;
   min-height: 400px !important;
-  max-height: 900px;
+   max-height: 900px;
   overflow-y: auto;
   overflow-x: hidden;
+  width: 100%;
 }
 
 .Aligner {
