--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,6 @@
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 /* @import "~slick-carousel/slick/slick.css"; */
 /* @import "~slick-carousel/slick/slick-theme.css"; */
-@import "~primereact/resources/themes/redmond/theme.css";
-@import "~primereact/resources/primereact.min.css";
 @import "~react-alice-carousel/lib/alice-carousel.css";
 @import "~rsuite/dist/styles/rsuite.min.css";
 @import "~react-draft-wysiwyg/dist/react-draft-wysiwyg.css";
@@ -485,11 +483,13 @@ html {
 
 .demo-wrapper {
   margin-top: 16px;
-  min-height: 400px !important;
+  width: 80%;
+}
+
+.demo-editor {
+   min-height: 400px !important;
    max-height: 900px;
-  overflow-y: auto;
-  overflow-x: hidden;
-  width: 100%;
+   overflow-y: auto;
 }
 
 .Aligner {
@@ -562,4 +562,8 @@ width: 100vw;
     margin-top: 37vh;
     height: 120px;
     background-color: black;
+}
+
+.rdw-embedded-modal {
+  height: 228px;
 }
